test/functions/ferguson/ref-pair/const-error-iterated2.good
const-error-iterated2.chpl:28: error: const actual is passed to 'ref' formal 'A' of writeForAZip()
const-error-iterated2.chpl:29: error: const actual is passed to 'ref' formal 'A' of writeForallAZip()
const-error-iterated2.chpl:30: error: const actual is passed to 'ref' formal 'A' of writeCoforallAZip()
